///! Integration tests for storage gRPC server
///!
///! These are REAL tests that:
///! - Start an actual gRPC server with DatabaseCoordinator
///! - Create a real gRPC client
///! - Test all operations end-to-end
///! - Use temporary databases for isolation

use std::sync::Arc;
use tempfile::TempDir;
use tonic::transport::Server;
use tonic::Request;

use storage::{DatabaseCoordinator, grpc_server::DatabaseServer};
use common::grpc::database::{
    database_service_server::DatabaseServiceServer,
    database_service_client::DatabaseServiceClient,
    Conversation, StoreConversationRequest,
    Knowledge, StoreKnowledgeRequest,
    StoredEmbedding, StoreEmbeddingRequest,
    ConversationRequest, KnowledgeRequest,
};

/// Test helper to create a temporary database
fn create_temp_db() -> (TempDir, Arc<DatabaseCoordinator>) {
    let temp_dir = TempDir::new().unwrap();
    let coordinator = DatabaseCoordinator::with_base_path(Some(temp_dir.path().to_path_buf()))
        .expect("Failed to create test database");
    (temp_dir, Arc::new(coordinator))
}

/// Test helper to start a gRPC server on a random port
async fn start_test_server(coordinator: Arc<DatabaseCoordinator>) -> (u16, tokio::task::JoinHandle<()>) {
    // Find available port
    let listener = tokio::net::TcpListener::bind("127.0.0.1:0").await.unwrap();
    let port = listener.local_addr().unwrap().port();
    drop(listener);
    
    let server = DatabaseServer::new(coordinator);
    let addr = format!("127.0.0.1:{}", port).parse().unwrap();
    
    let handle = tokio::spawn(async move {
        Server::builder()
            .add_service(DatabaseServiceServer::new(server))
            .serve(addr)
            .await
            .unwrap();
    });
    
    // Give server time to start
    tokio::time::sleep(tokio::time::Duration::from_millis(100)).await;
    
    (port, handle)
}

#[tokio::test]
async fn test_store_and_retrieve_conversation() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    // Create client
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect to test server");
    
    // Store a conversation
    let conversation = Conversation {
        id: "msg_001".to_string(),
        session_id: "session_001".to_string(),
        content: "Hello, world!".to_string(),
        timestamp: 1234567890,
        role: "user".to_string(),
    };
    
    let store_request = Request::new(StoreConversationRequest {
        conversation: Some(conversation.clone()),
    });
    
    let store_response = client.store_conversation(store_request).await;
    assert!(store_response.is_ok(), "Failed to store conversation");
    let store_result = store_response.unwrap().into_inner();
    assert!(store_result.success, "Store conversation returned success=false");
    
    // Retrieve conversations
    let get_request = Request::new(ConversationRequest {
        session_id: "session_001".to_string(),
    });
    
    let get_response = client.get_conversations(get_request).await;
    assert!(get_response.is_ok(), "Failed to retrieve conversations");
    
    let conversations = get_response.unwrap().into_inner().conversations;
    assert_eq!(conversations.len(), 1, "Expected 1 conversation");
    
    let retrieved = &conversations[0];
    assert_eq!(retrieved.id, conversation.id);
    assert_eq!(retrieved.session_id, conversation.session_id);
    assert_eq!(retrieved.content, conversation.content);
    assert_eq!(retrieved.role, conversation.role);
}

#[tokio::test]
async fn test_store_and_retrieve_multiple_conversations() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect");
    
    // Store multiple conversations in the same session
    let session_id = "session_multi".to_string();
    let conversations = vec![
        Conversation {
            id: "msg_001".to_string(),
            session_id: session_id.clone(),
            content: "First message".to_string(),
            timestamp: 1000,
            role: "user".to_string(),
        },
        Conversation {
            id: "msg_002".to_string(),
            session_id: session_id.clone(),
            content: "Second message".to_string(),
            timestamp: 2000,
            role: "assistant".to_string(),
        },
        Conversation {
            id: "msg_003".to_string(),
            session_id: session_id.clone(),
            content: "Third message".to_string(),
            timestamp: 3000,
            role: "user".to_string(),
        },
    ];
    
    for conversation in &conversations {
        let store_request = Request::new(StoreConversationRequest {
            conversation: Some(conversation.clone()),
        });
        client.store_conversation(store_request).await.unwrap();
    }
    
    // Retrieve all conversations
    let get_request = Request::new(ConversationRequest {
        session_id: session_id.clone(),
    });
    
    let retrieved = client.get_conversations(get_request).await.unwrap().into_inner().conversations;
    assert_eq!(retrieved.len(), 3, "Expected 3 conversations");
    
    // Verify order and content
    assert_eq!(retrieved[0].content, "First message");
    assert_eq!(retrieved[1].content, "Second message");
    assert_eq!(retrieved[2].content, "Third message");
}

#[tokio::test]
async fn test_store_and_retrieve_knowledge() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect");
    
    // Store knowledge
    let knowledge = Knowledge {
        id: "entity_001".to_string(),
        content: "The capital of France is Paris".to_string(),
        source: "fact".to_string(),
        timestamp: 1234567890,
    };
    
    let store_request = Request::new(StoreKnowledgeRequest {
        knowledge: Some(knowledge.clone()),
    });
    
    let store_response = client.store_knowledge(store_request).await;
    assert!(store_response.is_ok(), "Failed to store knowledge");
    
    // Retrieve knowledge
    let get_request = Request::new(KnowledgeRequest {
        id: "entity_001".to_string(),
    });
    
    let get_response = client.get_knowledge(get_request).await;
    assert!(get_response.is_ok(), "Failed to retrieve knowledge");
    
    let retrieved = get_response.unwrap().into_inner().knowledge;
    assert!(retrieved.is_some(), "Knowledge not found");
    
    let retrieved_knowledge = retrieved.unwrap();
    assert_eq!(retrieved_knowledge.id, knowledge.id);
    assert_eq!(retrieved_knowledge.content, knowledge.content);
    assert_eq!(retrieved_knowledge.source, knowledge.source);
}

#[tokio::test]
async fn test_store_embedding() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect");
    
    // Store embedding
    let embedding = StoredEmbedding {
        id: "emb_001".to_string(),
        vector: vec![0.1, 0.2, 0.3, 0.4, 0.5],
        text: "sample text".to_string(),
    };
    
    let store_request = Request::new(StoreEmbeddingRequest {
        embedding: Some(embedding.clone()),
    });
    
    let store_response = client.store_embedding(store_request).await;
    assert!(store_response.is_ok(), "Failed to store embedding");
    let store_result = store_response.unwrap().into_inner();
    assert!(store_result.success, "Store embedding returned success=false");
}

#[tokio::test]
async fn test_concurrent_operations() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    // Spawn multiple clients performing concurrent operations
    let mut handles = vec![];
    
    for i in 0..10 {
        let port = port;
        let handle = tokio::spawn(async move {
            let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
                .await
                .unwrap();
            
            let conversation = Conversation {
                id: format!("msg_{:03}", i),
                session_id: "concurrent_session".to_string(),
                content: format!("Message {}", i),
                timestamp: 1000 + i as i64,
                role: if i % 2 == 0 { "user" } else { "assistant" }.to_string(),
            };
            
            let request = Request::new(StoreConversationRequest {
                conversation: Some(conversation),
            });
            
            client.store_conversation(request).await.unwrap();
        });
        
        handles.push(handle);
    }
    
    // Wait for all operations to complete
    for handle in handles {
        handle.await.unwrap();
    }
    
    // Verify all messages were stored
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .unwrap();
    
    let get_request = Request::new(ConversationRequest {
        session_id: "concurrent_session".to_string(),
    });
    
    let retrieved = client.get_conversations(get_request).await.unwrap().into_inner().conversations;
    assert_eq!(retrieved.len(), 10, "Expected 10 concurrent messages");
}

#[tokio::test]
async fn test_error_handling_missing_knowledge() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect");
    
    // Try to retrieve non-existent knowledge
    let get_request = Request::new(KnowledgeRequest {
        id: "non_existent_id".to_string(),
    });
    
    let get_response = client.get_knowledge(get_request).await;
    
    // Should return an error status
    assert!(
        get_response.is_err() || get_response.unwrap().into_inner().knowledge.is_none(),
        "Expected error or None for non-existent knowledge"
    );
}

#[tokio::test]
async fn test_session_isolation() {
    // Setup
    let (_temp_dir, coordinator) = create_temp_db();
    let (port, _server_handle) = start_test_server(coordinator).await;
    
    let mut client = DatabaseServiceClient::connect(format!("http://127.0.0.1:{}", port))
        .await
        .expect("Failed to connect");
    
    // Store conversations in two different sessions
    let conv1 = Conversation {
        id: "msg_001".to_string(),
        session_id: "session_A".to_string(),
        content: "Session A message".to_string(),
        timestamp: 1000,
        role: "user".to_string(),
    };
    
    let conv2 = Conversation {
        id: "msg_002".to_string(),
        session_id: "session_B".to_string(),
        content: "Session B message".to_string(),
        timestamp: 2000,
        role: "user".to_string(),
    };
    
    client.store_conversation(Request::new(StoreConversationRequest {
        conversation: Some(conv1),
    })).await.unwrap();
    
    client.store_conversation(Request::new(StoreConversationRequest {
        conversation: Some(conv2),
    })).await.unwrap();
    
    // Retrieve session A conversations
    let session_a_convs = client.get_conversations(Request::new(ConversationRequest {
        session_id: "session_A".to_string(),
    })).await.unwrap().into_inner().conversations;
    
    // Retrieve session B conversations
    let session_b_convs = client.get_conversations(Request::new(ConversationRequest {
        session_id: "session_B".to_string(),
    })).await.unwrap().into_inner().conversations;
    
    // Verify isolation
    assert_eq!(session_a_convs.len(), 1);
    assert_eq!(session_b_convs.len(), 1);
    assert_eq!(session_a_convs[0].content, "Session A message");
    assert_eq!(session_b_convs[0].content, "Session B message");
}

